--- a/gb/19/12/26/n11746044.md
+++ b/gb/19/12/26/n11746044.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/osnkrv285/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/osnkrv285/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/osnkrv285/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/osnkrv285/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/osnkrv285/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yywlhi373/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yywlhi373/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/yywlhi373/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yywlhi373/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/yywlhi373/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yywlhi373/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/yywlhi373/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yywlhi373/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/yywlhi373/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yywlhi373/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/yywlhi373/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yywlhi373/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/yywlhi373/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yywlhi373/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/yywlhi373/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yywlhi373/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/yywlhi373/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yywlhi373/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/yywlhi373/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yywlhi373/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yywlhi373/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yywlhi373/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yywlhi373/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>高750公尺 世界最大圣诞树在意大利</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-72796439-600x400.jpg" />
+<a href="https://git.io/JkaJ8"><img width="600" src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yywlhi373/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>全球最大的圣诞树位于意大利城镇古比奥（Gubbio）。图为2006年12月11日，这棵圣诞树的景象。(Paolo TOSTI/AFP via Getty Images)
 </h6>
 <hr>
-<p>【大纪元2019年12月26日讯】（大纪元记者陈俊村编译报导）在意大利中部城镇<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E5%8F%A4%E6%AF%94%E5%A5%A5.md">古比奥</a>（Gubbio）的山坡上，由巨型灯饰组成的世界最大<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E5%9C%A3%E8%AF%9E%E6%A0%91.md">圣诞树</a>，每年都会在圣诞节之前点亮，今年也不例外。在过去几十年来，这已经成为当地的传统以及吸引游客造访的亮点之一。</p>
-<p>1981年12月7日，这棵由700多个巨型灯饰组成的<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E5%9C%A3%E8%AF%9E%E6%A0%91.md">圣诞树</a>首次点亮。此后在每年的这一天，<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E5%8F%A4%E6%AF%94%E5%A5%A5.md">古比奥</a>都会举行<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E7%82%B9%E7%81%AF.md">点灯</a>仪式，让这棵750公尺高的圣诞树“复活”，并一直照亮该城镇直到第二年的1月6日。</p>
+	<p>【大纪元2019年12月26日讯】（大纪元记者陈俊村编译报导）在意大利中部城镇<ahref="https://github.com/yywlhi373/djy/blob/master/gb/tag/%E5%8F%A4%E6%AF%94%E5%A5%A5.md#1">古比奥</a>（Gubbio）的山坡上，由巨型灯饰组成的世界最大<ahref="https://github.com/yywlhi373/djy/blob/master/gb/tag/%E5%9C%A3%E8%AF%9E%E6%A0%91.md#1">圣诞树</a>，每年都会在圣诞节之前点亮，今年也不例外。在过去几十年来，这已经成为当地的传统以及吸引游客造访的亮点之一。</p>
+<p>1981年12月7日，这棵由700多个巨型灯饰组成的<ahref="https://github.com/yywlhi373/djy/blob/master/gb/tag/%E5%9C%A3%E8%AF%9E%E6%A0%91.md#1">圣诞树</a>首次点亮。此后在每年的这一天，<ahref="https://github.com/yywlhi373/djy/blob/master/gb/tag/%E5%8F%A4%E6%AF%94%E5%A5%A5.md#1">古比奥</a>都会举行<ahref="https://github.com/yywlhi373/djy/blob/master/gb/tag/%E7%82%B9%E7%81%AF.md#1">点灯</a>仪式，让这棵750公尺高的圣诞树“复活”，并一直照亮该城镇直到第二年的1月6日。</p>
 </p>
-<blockquote class=""></blockquote><img width="600" src="https://raw.githubusercontent.com/osnkrv285/www/master/t/ntdtv/ins.jpg" ><h3 align=center>(instagram视频或图片.国内建议下载<a href="https://git.io/JesJV">翻墙软件</a>进入原文观看)</h3><hr><blockquote class="instagram-media" style="background: #FFF; border: 0; border-radius: 3px; box-shadow: 0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width: 600px; min-width: 326px; padding: 0; width: calc(100% - 2px);" data-instgrm-permalink="https://www.instagram.com/p/B6dR1kqo-Rg/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12">
+<blockquote class=""></blockquote><img width="600" src="https://raw.githubusercontent.com/yywlhi373/www/master/t/ntdtv/ins.jpg" ><h3 align=center>(instagram视频或图片.国内建议下载<a href="https://github.com/yywlhi373/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><blockquote class="instagram-media" style="background: #FFF; border: 0; border-radius: 3px; box-shadow: 0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width: 600px; min-width: 326px; padding: 0; width: calc(100% - 2px);" data-instgrm-permalink="https://www.instagram.com/p/B6dR1kqo-Rg/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12">
 <div style="padding: 16px;">
 <div style="display: flex; flex-direction: row; align-items: center;"></div>
 <div style="padding: 19% 0;"></div>
@@ -24,57 +24,54 @@
 </div>
 </blockquote>
 <p><a async src="//www.instagram.com/embed.js"></a>
-<p>该镇居民设置这棵圣诞树是为了纪念当地的守护神圣乌巴多（Saint Ubaldo）。它在1991年被吉尼斯<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E7%BA%AA%E5%BD%95.md">世界纪录</a>认定为世界最大的圣诞树，迄今尚没有其它圣诞树能望其项背。</p>
-<p>而在今年的12月7日，大批民众与游客聚集在古比奥的广场，参加这棵圣诞树的<a href="https://github.com/osnkrv285/djy/blob/master/gb/tag/%E7%82%B9%E7%81%AF.md">点灯</a>仪式。在伯利恒（Bethlehem）神职人员以遥控的方式点灯之后，巨大的圣诞树随即在漆黑的山坡上出现，随后还有放烟花活动。</p>
+<p>该镇居民设置这棵圣诞树是为了纪念当地的守护神圣乌巴多（Saint Ubaldo）。它在1991年被吉尼斯<ahref="https://github.com/yywlhi373/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E7%BA%AA%E5%BD%95.md#1">世界纪录</a>认定为世界最大的圣诞树，迄今尚没有其它圣诞树能望其项背。</p>
+<p>而在今年的12月7日，大批民众与游客聚集在古比奥的广场，参加这棵圣诞树的<ahref="https://github.com/yywlhi373/djy/blob/master/gb/tag/%E7%82%B9%E7%81%AF.md#1">点灯</a>仪式。在伯利恒（Bethlehem）神职人员以遥控的方式点灯之后，巨大的圣诞树随即在漆黑的山坡上出现，随后还有放烟花活动。</p>
 <p>要让这棵巨大的圣诞树顺利进行点灯仪式可不是件容易的事，所幸当地一群志工会巡查数以千计的电灯和缆线，以确保它们都能正常运作。</p>
 <p>今年，他们巡查了超过8,500公尺长的缆线和超过3,000电灯，以及35千瓦的电力。光是圣诞树上方的明亮星星就使用了1,350个电灯。</p>
 <p>该镇居民、游客和捐助者每年都会进行慈善募款活动。而在今年，他们募得的款项将捐给国际人道组织救助儿童会（Save the Children）。</p>
-<p><a src=""></a><a href="https://git.io/Jeb0M"><img width="600" src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://git.io/JesJV">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/CRXZmO00K5A" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p><a src=""></a><a href="https://git.io/JkaJ8"><img width="600" src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/yywlhi373/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/CRXZmO00K5A" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <p>责任编辑：林琮文 #</p>
-
+	
+<hr>
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/19/12/26/n11746044.htm">高750公尺 世界最大圣诞树在意大利</a>
-
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11742313.htm">另类环保圣诞佳节 二手玩具搭建环保圣诞树</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/18/n11730196.htm">德国圣诞树装饰传统 常青寓意庆佳节</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11705448.htm">【组图】川普夫妇点亮2020国家圣诞树</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/5/n11702389.htm">组图：美国国会山点亮圣诞树</a></li>
-> <li><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/12/6/n11705448.md">【组图】川普夫妇点亮2020国家圣诞树</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744649.htm">英预言家：2020年中国发生革命 川普连任</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11743919.htm">【翻墙必看】盘点2019中共搞砸的大事件</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11745443.htm">摩托车横穿李克强车队 险酿意外</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744554.htm">袜子里藏生物样本回国 中国男美国机场被捕</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733387.htm">占星解析薄熙来死亡消息是否属实</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725356.htm">为什么说“吃过冬至汤圆长一岁”？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733028.htm">以世运占星学解析中共政权的出生盘</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721189.htm">天上人间冬至日  传统节俗暖人心</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744018.htm">巴西烤肉十三道 道道桑巴风味足</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744104.htm">韩国小狗在“幼儿园”排排睡 可爱极了</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11732594.htm">桑椹延年益寿好处多 桑椹膏和桑椹茶的作法</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743069.htm">猫咪当红娘隔空牵红线 英男飞越4000英里会美女</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11742993.htm">93岁老奶奶玩角色扮演Cosplay大红 粉丝百万</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743455.htm">【新闻看点】蔡英文一年大翻盘 北京功劳不小</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/22/n11738977.htm">【思想领袖】哪些因素威胁美国文化与繁荣（下）</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11743804.htm">【拍案惊奇】不平夜全港乱战 传2人坠楼警在场</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743273.htm">中国多地禁过圣诞 藉历史宣传“仇恨”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741624.htm">【翻墙必看】北大教授：七常委先公示财产</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11741030.htm">大陆课外培训机构倒闭潮 今年1.2万家关停</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11739406.htm">岚摘公信榜年销量冠军 TWICE与BTS入Top5</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744287.htm">侯佩岑婚后8年首晒全家福 温馨庆圣诞</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743740.htm">高圆圆女儿受宠爱 赵又廷父母为孙女制圣诞礼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/23/n11740019.htm">崔智友对怀孕心怀感恩 明年5月为人母</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11744661.htm">Wendy彩排中骨折 Red Velvet后续行程未定</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733387.htm">占星解析薄熙来死亡消息是否属实</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11725356.htm">为什么说“吃过冬至汤圆长一岁”？</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/19/n11733028.htm">以世运占星学解析中共政权的出生盘</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/13/n11721189.htm">天上人间冬至日  传统节俗暖人心</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/17/n11728511.htm">神的美好世界不接受自杀的人</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/19/12/5/n11702389.md#1">组图：美国国会山点亮圣诞树</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/19/12/6/n11705448.md#1">【组图】川普夫妇点亮2020国家圣诞树</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/19/12/18/n11730196.md#1">德国圣诞树装饰传统 常青寓意庆佳节</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/19/12/24/n11742313.md#1">另类环保圣诞佳节 二手玩具搭建环保圣诞树</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/osnkrv285/djy/blob/master/gb/19/12/26/n11746044.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/osnkrv285/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/osnkrv285/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/osnkrv285/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/osnkrv285/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/6/n10619679.md#1" target="_blank">林辉：教授从练习低头弯腰到乐极生悲</a></li><li><a href="https://github.com/yywlhi373/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/23/n10871086.md#1" target="_blank">绝处逢生 大陆法轮功学员谢师恩</a></li><hr>
+
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/15/n12550540.md#1">因预言中共病毒爆红 印度男孩预示来年天象</a></li>
+<li><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/13/n12546586.md#1">紫微斗数推算  小谈拜登真能登大位吗？</a></li>
+<li><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
+<li><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/11/n12541883.md#1">突出部之役 巴顿将军的神迹之战</a></li>
+<li><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/17/n12556457.md#1">从《狮子王》经典台词 看天选之王的成长</a></li>
+<li><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564519.md#1">【财商天下】对抗神秘“影子金权” 川普动了谁的奶酪</a></li>
+<li><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12562189.md#1">【新闻看点】更多丑闻曝光 拜登总统美梦落空？</a></li>
+<li><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12563699.md#1">【新闻大家谈】舞弊八大证据和服务器疑云</a></li>
+<li><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12561543.md#1">朱利安尼：28州选票数据被送德国西班牙</a></li>
+<li><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560324.md#1">清点邮寄选票后 布碌崙长岛多位民主党反超夺位</a></li>
+<li><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560602.md#1">密州韦恩县选举结果再翻转 检票官撤认证</a></li>
+<li><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/18/n12559155.md#1">孙俪晒六岁女儿毛笔字 小花版千字文字体工整</a></li>
+<li><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560394.md#1">姜素拉怀孕获公司证实 孩子预计明年4月出生</a></li>
+<li><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/17/n12557059.md#1">土国表妹确诊染疫 吴凤叹病毒把多国变成地狱</a></li>
+<li><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12561769.md#1">赵树海谈及家庭生活 赞高圆圆是标准儿媳</a></li>
+<li><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560410.md#1">龙千玉邀杨哲对唱新歌 首被后辈“指正”唱腔</a></li>
+<li><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/18/n12557834.md#1">【美食天堂】4种方法长久保存姜～几个月都新鲜！</a></li>
+<li><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/18/n12557479.md#1">全球最后一只白色长颈鹿 加装GPS追踪器</a></li>
+<li><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/18/n12557985.md#1">45亿年历史陨石砸破屋顶 印尼男子变大富翁</a></li>
+<li><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/15/n12550494.md#1">冷藏肉与冷冻肉不一样 购买时要睁大眼睛</a></li>
+<li><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/17/n12556081.md#1">凡士林不只保湿 有5大妙用 挑选看1点</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yywlhi373/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yywlhi373/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/26/n11746044.htm">高750公尺 世界最大圣诞树在意大利</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yywlhi373/djy/blob/master/gb/19/12/26/n11746044.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yywlhi373/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yywlhi373/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yywlhi373/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
