--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -37,13 +37,13 @@
 谁用翅膀轻轻覆盖你
 愿你在睡梦中
 看见人类的坚毅......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月17日 2:04 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/13/n12547340.md#1" target="_blank">【魏晋选举】之一：“九品”选官制的建立与作用</a><br></h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/13/n12547340.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/shutterstock_502699225_1@1200x1200-150x120.jpg" align ="left"></a>魏晋南北朝时期的主要选官制度是九品官人法，约存在了四百年之久，上承两汉察举制，下启隋唐科举制，深刻影响了社会的兴衰更替与文化走向。士族集团纵横国政，士族标举贵族精神品质，享有空前绝后的荣誉和地位。这也是中国在长期分裂大变革时期的一段特有现象。本篇以人才选举制度为核心，概括揭示九品官人法在每个大的历史时代用人之面貌，以及.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月17日 1:24 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565754.md#1" target="_blank">儿歌：童心拾趣</a><br></h3> 星儿眨眼瞧， 月牙笑弯腰： 风儿追着落叶跑。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月21日 8:40 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565945.md#1" target="_blank">诗歌：冬景</a><br></h3> 冬景婆娑晨风凉， 潇潇振木叶正黄。 矮墙黛瓦翻遗韵， 缤纷铺锦漫彷徨。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月21日 8:36 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565741.md#1" target="_blank">长夜如墨</a><br></h3> 初冬夜，夜深长，长夜如墨。 败枝风紧，残叶声凄，难说萧瑟。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月21日 5:43 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12561526.md#1" target="_blank">台湾，鱼与熊掌</a><br></h3>台湾，被誉为“美丽之岛”。其来有自：16世纪期间，葡萄牙大事向海外扩展势力，该国人士飘洋过海，到处寻找可扩展之处，有一天于航海时发现台湾，大呼：“Ilha formosa!”（美丽之岛！）......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月19日 11:11 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/18/n12557391.md#1" target="_blank">新诗：阿猴，朝阳城门</a><br></h3>吆喝的叫卖声邀你再入红尘
 你不为所动伫在原地不动
 砖红色的衣着依然肃穆......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月19日 8:20 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/18/n12557383.md#1" target="_blank">藏头诗：川普必胜</a><br></h3> 川河渐清秀 普世价值留 必有神佛助 胜券握在手......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月18日 11:19 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/16/n12553937.md#1" target="_blank">今月：亘古不闻的大战</a><br></h3>  有一场大战亘古未闻 没有硝烟地动天惊 激荡神州席卷全球 正在人间迅猛进行......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月17日 12:27 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/cvusyr3283/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/cvusyr3283/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/cvusyr3283/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/cvusyr3283/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/cvusyr3283/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/cvusyr3283/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/cvusyr3283/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/cvusyr3283/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/cvusyr3283/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/cvusyr3283/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/cvusyr3283/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/news2007.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cvusyr3283/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2007.htm">https://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://github.com/cvusyr3283/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
